<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/anh4">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBlackHighOpacity">

                <RelativeLayout
                    android:id="@+id/Rela"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp">

                    <LinearLayout
                        android:id="@+id/Linear1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/Back"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/arrow" />

                        <TextView
                            android:id="@+id/Name"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/YProfile"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Update"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/Update"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:id="@+id/Delete"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/Delete"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_below="@id/Linear1"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/border_replace_cardview"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/pirate" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/Rela"
                    android:background="@color/colorBlackOpacity">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/edName"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@color/colorBlackHighOpacity"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/Name"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@color/colorBlackHighOpacity"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_20sdp"
                                android:layout_marginTop="@dimen/_15sdp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:text="@string/PhoneNumber"
                                    android:textColor="@color/colorSilver"
                                    android:textSize="@dimen/_13sdp" />

                                <EditText
                                    android:background="@null"
                                    android:id="@+id/edPhoneNumber"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:text="0123456789"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/_15sdp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_20sdp"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:text="@string/Email"
                                    android:textColor="@color/colorSilver"
                                    android:textSize="@dimen/_13sdp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:text="@string/InputEmail"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/_15sdp" />
                            </LinearLayout>

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/_20sdp"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="casual"
                                        android:text="@string/Group"
                                        android:textColor="@color/colorSilver"
                                        android:textSize="@dimen/_13sdp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="casual"
                                        android:text="Family"
                                        android:textColor="@color/colorWhite"
                                        android:textSize="@dimen/_15sdp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:layout_marginRight="@dimen/_20sdp"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="casual"
                                        android:text="@string/Tune"
                                        android:textColor="@color/colorSilver"
                                        android:textSize="@dimen/_13sdp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="casual"
                                        android:text="Dusk Till Down"
                                        android:textColor="@color/colorWhite"
                                        android:textSize="@dimen/_15sdp" />
                                </LinearLayout>
                            </RelativeLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_30sdp"
                                    android:fontFamily="casual"
                                    android:gravity="center"
                                    android:text="History"
                                    android:textColor="@color/colorSilver"
                                    android:textSize="@dimen/_13sdp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_10sdp"
                                    android:fontFamily="casual"
                                    android:text="@string/SomeText"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/_15sdp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</layout>