<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">

        <RelativeLayout
            android:id="@+id/Linear"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_350sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/border_addcontact"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="casual"
                android:text="@string/FullName"
                android:textColor="@color/colorSilver"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_below="@id/Name"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/border_ed"
                android:fontFamily="casual"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/PhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edName"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="casual"
                android:text="@string/PhoneNumber"
                android:textColor="@color/colorSilver"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_below="@id/PhoneNumber"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/border_ed"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:maxLength="18"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edPhoneNumber"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="casual"
                android:text="@string/Email"
                android:textColor="@color/colorSilver"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_below="@id/Email"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/border_ed"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edEmail"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_message"
                    android:fontFamily="casual"
                    android:text="@string/Group"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnTune"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_message"
                    android:fontFamily="casual"
                    android:text="@string/Tune"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/border_call">

                <ImageView
                    android:id="@+id/btnAddContact"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/check" />
            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/user" />
    </RelativeLayout>

</layout>